--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ models/__pycache__/models.cpython-37.pyc
 main/__pycache__/views.cpython-36.pyc
 *.pyc
 *.pyc
+adminSite/__pycache__/urls.cpython-36.pyc
+adminSite/__pycache__/views.cpython-36.pyc
+login/__pycache__/views.cpython-36.pyc
+main/__pycache__/urls.cpython-36.pyc
+main/__pycache__/views.cpython-36.pyc
